2001-08-29  Ken Raeburn  <raeburn@mit.edu>

	* defs.h: Include socket-utils.h.
	* telnetd.c: Include fake-addrinfo.c.
	(FAI_PREFIX): Define.
	(doit): Now static, and takes sockaddr pointer rather than
	sockaddr_in pointer.  Use getnameinfo instead of gethostbyaddr to
	verify that host name was available.
	(main): Use sockaddr_storage for remote address buffer; clear
	before using.  Only do IP_TOS processing for IPv4.

	* termio-tn.c, termios-tn.c: Define dummy variables if STREAMSPTY
	isn't defined, to silence compiler complaints about empty files.

2001-08-02  Tom Yu  <tlyu@mit.edu>

	* authenc.c (net_write): Rewrite in terms of netwrite().

	* configure.in: Check for vsnprintf().

	* ext.h: New prototypes for netprintf, netprintf_urg,
	netprintf_noflush, netwrite, netputs.

	* slc.c: Fix to use new NETOBUF-handling functions.

	* state.c: Fix to use new NETOBUF-handling functions.

	* telnetd.c: Fix to use new NETOBUF-handling functions.

	* termstat.c: Fix to use new NETOBUF-handling functions.

	* utility.c: General rework to be more paranoid about
	bounds-checking of NETOBUF and NFRONTP.  Abstract away
	interactions with NETOBUF to eliminate explicit references to
	NFRONTP in many places.
	(netwrite): New function; copies a buffer to the
	NETOBUF "ring buffer", checking bounds and calling netflush() if
	needed.
	(netputs): New function; calls netwrite() with a nul-terminated
	string.
	(netprintf, netprintf_ext): New function; wrap sprintf() with
	bounds checking for use with NETOBUF.
	(netprintf_urg): New function; like netprintf() except sets neturg
	to point at last char written.
	(netprintf_noflush): New function; like netprintf() except
	silently fails if NETOBUF is full.
	(ttloop, printoption, printsub, printdata): Fix to use new
	NETOBUF-handling functions.

2001-07-23  Ezra Peisach  <epeisach@mit.edu>

	* sys_term.c (startslave): Get rid of extra argument in call to
	getptyslave().

2001-07-06  Ezra Peisach  <epeisach@mit.edu>
