@@ -1,3 +1,7 @@
+2001-08-30  Ken Raeburn  <raeburn@mit.edu>
+
+	* defs.h: Don't include socket-utils.h until after netinet/in.h.
+
 2001-08-29  Ken Raeburn  <raeburn@mit.edu>
 
 	* defs.h: Include socket-utils.h.
